[gd_scene load_steps=11 format=3 uid="uid://ca5p7sygosjgm"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_2kg85"]
[ext_resource type="PackedScene" uid="uid://cfm412pwa7104" path="res://Scenes/crosshair.tscn" id="3_m5ked"]
[ext_resource type="FontFile" uid="uid://dde1gg8x42lwc" path="res://Assets/Fonts/PixelOperator8-Bold.ttf" id="3_rqnxd"]
[ext_resource type="Texture2D" uid="uid://b2wx7i86qgg7o" path="res://Assets/Space_backgrounds/Large 1024x1024/Blue Nebula/Blue Nebula 2 - 1024x1024.png" id="3_uyd68"]
[ext_resource type="FontFile" uid="uid://bpimoexloxotl" path="res://Assets/Fonts/PixelOperator8.ttf" id="4_ghjks"]
[ext_resource type="AudioStream" uid="uid://c6d3vrw6i5ke" path="res://Assets/Space_sounds/twoTone2.mp3" id="5_82opd"]
[ext_resource type="AudioStream" uid="uid://cd175jimy02vy" path="res://Assets/Space_sounds/phaserDown3.mp3" id="6_a4pa3"]
[ext_resource type="AudioStream" uid="uid://bpy2ntjl2e0xq" path="res://Assets/Space_sounds/powerUp7.mp3" id="6_uv2vy"]
[ext_resource type="PackedScene" uid="uid://ctf51nnoxr8pm" path="res://Scenes/heart.tscn" id="6_vscvk"]
[ext_resource type="AudioStream" uid="uid://bp3b7t4ytef1p" path="res://Assets/Explosion_sounds/explosion02.wav" id="8_meqr5"]

[node name="Game" type="Node2D"]
script = ExtResource("1_2kg85")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1024.0
offset_bottom = 1024.0
texture = ExtResource("3_uyd68")

[node name="Score_label" type="Label" parent="."]
offset_left = 456.0
offset_top = 50.0
offset_right = 548.0
offset_bottom = 66.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("3_rqnxd")
theme_override_font_sizes/font_size = 0
text = "Score:"

[node name="Health_label" type="Label" parent="."]
offset_left = 60.0
offset_top = 50.0
offset_right = 148.0
offset_bottom = 66.0
theme_override_fonts/font = ExtResource("4_ghjks")
text = "Health:"

[node name="HealthUp" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("6_uv2vy")
bus = &"SFX"

[node name="HealthDown" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_82opd")
bus = &"SFX"

[node name="DestroyedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_meqr5")
volume_db = -20.0
bus = &"SFX"

[node name="GameOver" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("6_a4pa3")
bus = &"SFX"

[node name="Asteroids" type="Node2D" parent="."]

[node name="HealthUps" type="Node2D" parent="."]

[node name="Heart" parent="." instance=ExtResource("6_vscvk")]
position = Vector2(185, 57)

[node name="GameOverControl" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameOverPanel" type="Panel" parent="GameOverControl"]
layout_mode = 0
offset_left = 310.0
offset_top = 360.0
offset_right = 712.0
offset_bottom = 650.0

[node name="RestartButton" type="Button" parent="GameOverControl"]
layout_mode = 0
offset_left = 461.0
offset_top = 504.0
offset_right = 563.0
offset_bottom = 528.0
theme_override_fonts/font = ExtResource("4_ghjks")
text = "Restart"

[node name="GameOverLabel" type="Label" parent="GameOverControl"]
layout_mode = 0
offset_left = 437.0
offset_top = 416.0
offset_right = 587.0
offset_bottom = 442.0
theme_override_fonts/font = ExtResource("3_rqnxd")
text = "Game Over!"

[node name="QuitGameButton" type="Button" parent="GameOverControl"]
layout_mode = 0
offset_left = 449.0
offset_top = 552.0
offset_right = 575.0
offset_bottom = 576.0
theme_override_fonts/font = ExtResource("4_ghjks")
text = "Quit Game
"

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PausePanel" type="Panel" parent="PauseMenu"]
layout_mode = 0
offset_left = 397.0
offset_top = 399.0
offset_right = 627.0
offset_bottom = 621.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_left = 442.0
offset_top = 425.0
offset_right = 582.0
offset_bottom = 633.0
theme_override_constants/separation = 24

[node name="PauseLabel" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rqnxd")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ghjks")
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ghjks")
text = "Restart"

[node name="QuitGameButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ghjks")
text = "Quit Game
"

[node name="Crosshair" parent="." instance=ExtResource("3_m5ked")]
position = Vector2(512, 512)

[connection signal="pressed" from="GameOverControl/RestartButton" to="." method="_restart_button_pressed"]
[connection signal="pressed" from="GameOverControl/QuitGameButton" to="." method="_quit_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/RestartButton" to="." method="_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitGameButton" to="." method="_quit_button_pressed"]
